# quiz-haskell

./: Logica.hs  Main.hs  Modelo.hs  README.md  highscores.txt  quiz-juliao.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
